Fix button z-index

--- a/wp-content/themes/gatherboard/assets/scss/pages/_about.scss
+++ b/wp-content/themes/gatherboard/assets/scss/pages/_about.scss
@@ -59,6 +59,7 @@
       text-transform: uppercase;
       letter-spacing: 2px;
       font-size: 14px;
+      z-index: 100;
       &:hover {
         background: rgba(0,0,0,1);
       }
